log

Sat 16 Mar 2024 08:10:03 PM UTC: 
 tests:  0|7
total_score: 0/70
1206b1d
Sat 16 Mar 2024 08:10:55 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
2595815
Sat 16 Mar 2024 08:11:29 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
c0201a4
Sat 16 Mar 2024 08:12:27 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
32a8ebb
Sat 16 Mar 2024 08:12:50 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
Sat 16 Mar 2024 08:14:14 PM UTC: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
7e752a2
Sat 16 Mar 2024 08:15:09 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:103:1: error: control reaches end of non-void function [-Werror=return-type]
  103 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
84c637f
